tests/snapshots/run_wpt_conformance__litert_averagePool2d_float16_4D_tensor_options_outputShapeRounding_ceil.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float16 4D tensor options.outputShapeRounding=ceil, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f16[1, 2, 5, 5];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="ceil", outputSizes=null, padding=[1, 0, 0, 1], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { averagePool2dOutput; }
}
